<?xml version="1.0"?>
<package>
  <name>LMB_flow_view</name>
  <version>1.0.0</version>
  <description>Convert FlowNet2's optical flow outputs into displayable images</description>

  <maintainer email="mayern@cs.uni-freiburg.de">Nikolaus Mayer</maintainer>

  <license>Non-commercial, for research purposes only.</license>

  <author email="ilg@cs.uni-freiburg.de">Eddy Ilg</author>
  <author email="mayern@cs.uni-freiburg.de">Nikolaus Mayer</author>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>cv_bridge</build_depend>
  <build_depend>image_transport</build_depend>
  <build_depend>message_filters</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>roslib</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>stereo_msgs</build_depend>
  <run_depend>cv_bridge</run_depend>
  <run_depend>image_transport</run_depend>
  <run_depend>message_filters</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>roslib</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>stereo_msgs</run_depend>

  <export>
  </export>
</package>
