<?xml version="1.0"?>
<package>
  <name>LMB_generic_images_feeder</name>
  <version>1.0.0</version>
  <description>Publish images</description>

  <maintainer email="mayern@cs.uni-freiburg.de">Nikolaus Mayer</maintainer>

  <license>Non-commercial, for research purposes only.</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>cv_bridge</build_depend>
  <build_depend>image_transport</build_depend>
  <build_depend>message_filters</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>roslib</build_depend>
  <build_depend>std_msgs</build_depend>
  <run_depend>cv_bridge</run_depend>
  <run_depend>image_transport</run_depend>
  <run_depend>message_filters</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>roslib</run_depend>
  <run_depend>std_msgs</run_depend>

  <export>
  </export>
</package>
